update scheduler resetting for tests

--- a/common/src/main/resources/softnetwork-scheduler.conf
+++ b/common/src/main/resources/softnetwork-scheduler.conf
@@ -2,7 +2,7 @@ softnetwork{
   scheduler {
     # id = "*"
     akka-node-role = scheduler
-    reset-cron-tabs {
+    reset-scheduler {
       initial-delay = 60
       delay = 60
     }
