--- a/testkit/src/test/resources/reference.conf
+++ b/testkit/src/test/resources/reference.conf
@@ -1,6 +1,10 @@
 softnetwork{
   scheduler {
     id = "my-scheduler"
+    reset-scheduler {
+      initial-delay = 0
+      delay = 1
+    }
     event-streams {
       entity-to-scheduler-tag = "entity-to-scheduler-"${softnetwork.scheduler.id}
     }
