--- a/api/src/main/resources/reference.conf
+++ b/api/src/main/resources/reference.conf
@@ -1,6 +1,8 @@
 include "softnetwork-jdbc-persistence.conf"
 include "softnetwork-scheduler.conf"
 
+softnetwork.api.name = "softnetwork-scheduler"
+softnetwork.api.version = "0.3.1.3"
 softnetwork.api.server.port = 9000
 softnetwork.api.server.request-timeout = 120 s
 
