upgrade server dependencies + swagger-path-prefix

--- a/api/src/main/resources/reference.conf
+++ b/api/src/main/resources/reference.conf
@@ -2,8 +2,9 @@ include "softnetwork-jdbc-persistence.conf"
 include "softnetwork-scheduler.conf"
 
 softnetwork.api.name = "softnetwork-scheduler"
-softnetwork.api.version = "0.3.2"
+softnetwork.api.version = "0.3.2.3"
 softnetwork.api.server.port = 9000
 softnetwork.api.server.request-timeout = 120 s
+softnetwork.api.server.swagger-path-prefix = ["swagger", "scheduler"]
 
 akka.cluster.roles = [${softnetwork.scheduler.akka-node-role}]
