upgrade persistence dependencies

--- a/api/src/main/resources/reference.conf
+++ b/api/src/main/resources/reference.conf
@@ -2,9 +2,12 @@ include "softnetwork-jdbc-persistence.conf"
 include "softnetwork-scheduler.conf"
 
 softnetwork.api.name = "softnetwork-scheduler"
-softnetwork.api.version = "0.4.0"
+softnetwork.api.version = "0.7-SNAPSHOT"
 softnetwork.api.server.port = 9000
 softnetwork.api.server.request-timeout = 120 s
 softnetwork.api.server.swagger-path-prefix = ["swagger", "scheduler"]
+
+# Important: enable HTTP/2 in ActorSystem's config
+akka.http.server.preview.enable-http2 = on
 
 akka.cluster.roles = [${softnetwork.scheduler.akka-node-role}]
